Improved resolution of Tom's ward images.

--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -246,11 +246,12 @@ conda activate bootcomp
 %------------------------------------------------
 
 \section{A practical problem}
+
 \begin{frame}
 \frametitle{Designing a rehabilitation ward}
 %Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
 \begin{figure}
-\includegraphics[width=1.0\linewidth]{ward1.png}
+\includegraphics[width=0.95\linewidth]{ward1a.pdf}
 \end{figure}
 \end{frame}
 
@@ -261,7 +262,7 @@ conda activate bootcomp
 \frametitle{Designing a rehabilitation ward}
 %Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
 \begin{figure}
-\includegraphics[width=1.0\linewidth]{ward2.png}
+\includegraphics[width=1.0\linewidth]{ward3a.pdf}
 \end{figure}
 \end{frame}
 
@@ -272,7 +273,7 @@ conda activate bootcomp
 \frametitle{Designing a rehabilitation ward}
 %Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
 \begin{figure}
-\includegraphics[width=1.0\linewidth]{ward3.png}
+\includegraphics[width=1.0\linewidth]{ward4a.pdf}
 \end{figure}
 \end{frame}
 
@@ -283,7 +284,7 @@ conda activate bootcomp
 \frametitle{Designing a rehabilitation ward}
 %Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
 \begin{figure}
-\includegraphics[width=1.0\linewidth]{ward4.png}
+\includegraphics[width=1.0\linewidth]{ward5a.pdf}
 \end{figure}
 \end{frame}
 
@@ -294,7 +295,7 @@ conda activate bootcomp
 \frametitle{Designing a rehabilitation ward}
 %Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
 \begin{figure}
-\includegraphics[width=1.0\linewidth]{ward5.png}
+\includegraphics[width=1.0\linewidth]{ward6a.pdf}
 \end{figure}
 \end{frame}
 
@@ -302,14 +303,48 @@ conda activate bootcomp
 
 
 \begin{frame}
-\frametitle{Designing a rehabilitation ward}
-%Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
-\begin{figure}
-\includegraphics[width=1.0\linewidth]{ward6.png}
-\end{figure}
+\frametitle{Design of Experiments}
+
+\textbf{1051 competing designs}
+    \begin{block}{Decision Variables}
+        \begin{itemize}
+            \item No. beds 
+            \item Bay size + no. bays
+            \item No. single rooms  
+        \end{itemize}
+    \end{block}
+    
+    
+    \begin{block}{Chance Constraints}
+        \begin{itemize}
+            \item Utilization of beds 
+            \item Patient transfers between bays
+        \end{itemize}
+    \end{block}
+
+
 \end{frame}
 
 %------------------------------------------------
+
+\begin{frame}
+\frametitle{Further work}
+
+\begin{itemize}
+    \item Comparison with sequential budget allocation algorithms finding top-m systems
+    \item 
+\end{itemize}
+    
+ 
+
+
+\end{frame}
+
+
+
+
+%------------------------------------------------
+
 
 \begin{frame}
 \frametitle{Blocks of Highlighted Text}
